removed GET endpoint
