# src/main/java/com/pplflw/peopleflow/controllers/PeopleFlowController.java
@@ -2,8 +2,6 @@ package com.pplflw.peopleflow.controllers;
 
 import com.pplflw.peopleflow.api.EmployeeApi;
 import com.pplflw.peopleflow.models.Employee;
-import com.pplflw.peopleflow.models.EmployeeEntity;
-import com.pplflw.peopleflow.services.EmployeeService;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -16,27 +14,15 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 import javax.validation.constraints.Min;
-import java.util.Optional;
 
 @RestController
 public class PeopleFlowController implements EmployeeApi {
-    @Autowired
-    EmployeeService employeeService;
     @Autowired
     KafkaTemplate<String, Object> kafkaTemplate;
     @Value("${tpd.topic-name}")
     String tpdTopicName;
     @Value("${tpd.change-state-topic}")
     String changeStateTopic;
-
-    @Override
-    public ResponseEntity<Employee> employeeGetById(@Min(1) @ApiParam(value = "id of the employee", required = true) @PathVariable("id") Integer id) {
-        Optional<EmployeeEntity> employee = employeeService.findById(id);
-        if (employee.isEmpty()) {
-            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-        }
-        return new ResponseEntity<>(employee.get().toEmployee(), HttpStatus.OK);
-    }
 
     @Override
     public ResponseEntity<Void> employeeCreate(@ApiParam(value = "employee information", required = true) @Valid @RequestBody Employee employee) {
